<resources>
    <string name="app_name">Oblig 1 Sensors</string>
    <string name="error_no_sensor">\"No sensor available\"</string>
    <string name="label_proximity">Proximity Sensor: %1$.2f</string>
    <string name="lux"> lux</string>
    <string name="sensorResult">%s: %1$.2f</string>
    <string name="sensorResultMagneticFiels">%s: %1$.2f</string>
    <string name="sensors_on_your_phone">Sensors on your phone</string>
    <string name="no_updates_on_data_yet">No updates on data yet...</string>
    <string name="sensors_from_hummidity_sensors">Sensors from Hummidity sensors:</string>
    <string name="sensors_from_orientation_sensors">Sensors from Orientation sensors:</string>
    <string name="sensors_from_accelorometer_sensors">Sensors from Accelorometer sensors:</string>
    <string name="sensors_from_pressure_sensors">Sensors from Pressure sensors:</string>
    <string name="sensors_from_magnetic_field_sensors">Sensors from Magnetic Field sensors:</string>
    <string name="sensors_from_ambient_tmperature_sensors">Sensors from Ambient Tmperature sensors:</string>
    <string name="sensors_fromlight_sensor">Sensors fromLight sensor:</string>
    <string name="sensors_from_proximity_sensors">Sensors from Proximity sensors:</string>
    <string name="sensors_from_gyroscope_sensors">Sensors from Gyroscope sensors:</string>
    <string name="sensors_from_game_vector">Sensors from Game Vector sensors:</string>

    <string name="list_of_all_sensors_on_my_device">List of all sensors on my device</string>
    <string name="halil_ibrahim_keser_mobile_programming_assignment_1">Halil Ibrahim Keser - Mobile Programming - Assignment 1</string>


</resources>